--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,11 +10,14 @@
     <%- include('nav.ejs') %>
 
     <!-- <%= JSON.stringify(글목록) %>
-    <!-- <%= 글목록 %> -->
+    <%= 글목록 %> -->
     <div class="white-bg">
       <% for(let i = 0; i < 글목록.length; i++){ %>
       <div class="list-box">
-        <h4><%= 글목록[i].title %></h4>
+        <h4>
+          <!-- id값을 이용해서, 글 링크 만들기 -->
+          <a href="/detail/<%= 글목록[i]._id %>"><%= 글목록[i].title %></a>
+        </h4>
         <p><%= 글목록[i].content %></p>
       </div>
       <% } %>
