--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,5 +1,6 @@
 <div class="nav">
   <a class="logo">AppleForum</a>
+  <!-- 링크를 만들어 보자. list, write 페이지로 이동 -->
   <a>Page1</a>
   <a>Page2</a>
 </div>
